add basic setup for implot
> Note that **16-bit indexing** problem is not handled

--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,7 @@
 	path = vendor/imgui
 	url = https://github.com/ocornut/imgui
 	branch = docking
+[submodule "implot"]
+	# git submodule add --force --name implot https://github.com/epezent/implot vendor/implot
+	path = vendor/implot
+	url = https://github.com/epezent/implot
